# ugcworld

./: .cursorrules  .gitignore  README.md  README_TESTING.md  debug_config.json  env.ps1  launch_server.bat  launch_server.ps1
.github/workflows/: tests.yml
docs/: SpellCost.md  network_protocol.md  server_architecture.md  voxel_sync.md
player-created-world/: project.godot
player-created-world/addons/custom_graph_editor/: graph_editor.gd
player-created-world/addons/gdUnit4/: plugin.cfg  plugin.gd.uid
player-created-world/addons/local_llm/: .gitignore  README.md  local_llm.gdextension  local_llm.gdextension.uid  plugin.cfg  plugin.gd  plugin.gd.uid
player-created-world/addons/local_llm/src/: CMakeLists.txt  SConstruct  llama_cpp_provider.cpp  llama_cpp_provider.h  llama_cpp_provider.windows.template_debug.x86_64.obj.import  llama_cpp_provider.windows.template_release.x86_64.obj.import  llm_generation_handle.cpp  llm_generation_handle.h  llm_generation_handle.windows.template_debug.x86_64.obj.import  llm_generation_handle.windows.template_release.x86_64.obj.import  register_types.cpp  register_types.h  register_types.windows.template_debug.x86_64.obj.import  register_types.windows.template_release.x86_64.obj.import
player-created-world/ai/workflows/: spell_authoring_v1.flow.yaml
player-created-world/docs/: ARCHITECTURE.md  LOCAL_LLM.md  SPELLS.md  VOXELS.md
player-created-world/models/: .download_state.json  .gitkeep  models.json
player-created-world/sample_assets/: Meshy_AI_A_large_iron_witches__0207160856_texture.glb.import  Meshy_AI_A_large_iron_witches__0207160856_texture_0.jpg.import  Meshy_AI_A_large_iron_witches__0207160856_texture_1.jpg.import  Meshy_AI_A_large_iron_witches__0207160856_texture_2.jpg.import
player-created-world/tools/: run_client.bat  run_client.sh  run_server.bat  run_server.sh  setup_voxel_terrain.gd  setup_voxel_terrain.gd.uid
scripts/: add_python_scripts_to_path.ps1  build_llm_linux.sh  build_llm_win.ps1  manage_models.ps1  manage_models.py  manage_models.sh  package_game.ps1  requirements-models.txt  restart_server_and_tests.ps1  restart_server_and_tests.sh  run_tests.ps1  run_tests.sh
server_godot/: project.godot
server_godot/shared/protocol/: Protocol.gd  (+1 more)
server_python/: app.py  database.py  job_worker.py  requirements.txt  spell_storage.py
server_python/data/: ugcworld.db
ugc_backend/: .dockerignore  Dockerfile  README.md  app.py  app_socketio.py  database.py  docker-compose.yml  fly.toml  job_worker.py  requirements.txt  spell_storage.py
(+192 files in other folders)
